styling/core.css
#leftside {
  min-width: 550px;
  float: left;
  width: 50%;
}

#rightside {
  min-width: 550px;
  float: right;
  width: 50%;
}

.wrapleftcontentbox {
  float: left;
  background: rgba(190, 190, 190, 0.3);
  margin: 10% 5% 10% 20%;
  padding: 10px;
  border-radius: 2px;
  /*background: #f8f8f8*/
}

.wraprightcontentbox {
  float: right;
  background: rgba(190, 190, 190, 0.3);
  margin: 10% 20% 10% 5%;
  padding: 10px;
  border-radius: 2px;
  /*background: #f8f8f8*/
}

.leftcontentbox {
  background-image:url("images/tiles/white_wall_hash.png");
  height: 500px;
  width: 500px;
  padding: 10px;
  border-radius: 2px;
}


.rightcontentbox {
  background-image:url("images/tiles/white_wall_hash.png");
  padding: 10px;
  border-radius: 2px;
}

.content {
	margin: 10px 10px;
}

.wraptitlebox {
  /*float: right;*/
  background: rgba(190, 190, 190, 0.3);
  /*margin: 0px 150px 0 0;*/
  /*height: 220px;*/
  width: 98.5%;
  padding: 7px;
  border-radius: 2px;
  /*background: #f8f8f8*/
}


.titlebox {

  background-image:url("images/tiles/white_wall_hash.png");
  height: inherit;
  width: inherit;
  padding: 10px;
  border-radius: 2px;
}

.title {
	/*margin: 10px 10px;*/
}

body {
  background-image:url("images/blk-grn-retro.jpg");

  /* background: -webkit-linear-gradient(right, #4a1c1c , #f3d7a0); /* For Safari 5.1 to 6.0 */
  font-family: Verdana;
}

#header {
  background: rgba(190, 190, 190, 0.7);
  /*background: -webkit-linear-gradient(right, #4a1c1c , #fce1aa);*/
  padding: 5px;
  position: relative;
  height: 30px;
}

#title {
  text-align: center;
  padding-top: 5px;
}


#disappearingthing {
  position: absolute;
}

#pics {
  position: absolute;
}

